# preprint

./: .gitignore  Cargo.toml  build.rs  preprint.iss  rust-toolchain.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  release.yml
i18n/: de-DE.ftl  de-DE.yml  en-US.ftl  en-US.yml
src/: app.rs  export.rs  i18n.rs  lib.rs  loader.rs  main.rs  preferences.rs  preview.rs  processing.rs  softproof.rs  updater.rs
tests/: app.rs  export.rs  i18n.rs  loader.rs  processing.rs  softproof.rs
