[package]
name = "preprint"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
bytemuck = "1.7"
eframe = "0.35.0"
egui-i18n = { version = "0.2", default-features = false, features = ["fluent"] }
egui_extras = "0.35.0"
egui_phosphor_icons = { version = "0.4", default-features = false }
image = "0.25.10"
imageproc = "0.27.0"
lcms2 = { version = "6.1.1", features = ["static"] }
rayon = "1.12.0"
rfd = "0.17.2"
tiff = "0.11"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.bundle]
name = "Preprint"
identifier = "dev.preprint.app"
publisher = "Preprint"
category = "GraphicsAndDesign"
short_description = "Prepare photo files for printing"
long_description = "Preprint prepares batches of photo files for printing by calculating PPI from target millimeter sizes, adding print borders, previewing optional ICC softproof output, and exporting PNG, JPEG, or TIFF files."
copyright = "Copyright (c) 2026"
