[package]
name = "preprint"
version = "1.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-channel = "2.5.0"
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
image = "0.25.10"
imageproc = "0.27.0"
lcms2 = { version = "6.1.1", features = ["static"] }
png = "0.18.1"
rayon = "1.12.0"
rfd = "0.17.2"
rust-i18n = "3.1.5"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tiff = "0.11"
thiserror = "2.0.18"
ureq = "3.3.0"

[dev-dependencies]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.bundle]
name = "Preprint"
identifier = "dev.preprint.app"
publisher = "Preprint"
category = "GraphicsAndDesign"
short_description = "Prepare photo files for printing"
long_description = "Preprint prepares batches of photo files for printing by calculating PPI from target millimeter sizes, adding print borders, previewing optional ICC softproof output, and exporting PNG, JPEG, or TIFF files."
copyright = "Copyright (c) 2026"
